hphp/test/slow/parser/hh-reserved-name-string-2.php.expectf
Fatal error: Cannot use 'HH\String' as class name as it is reserved in %s on line 4
